--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,77 @@
-#
+# 
 example_projects/
-embeddings
-logs
-data
+embeddings/
+logs/
+data/
+achive_data/
+
+# Общие правила для Python
+# Байт-коды Python
+__pycache__/
+*.py[cod]
+
+# Virtual Environment
+venv/
+ENV/
+env/
+.venv/
+
+# Distribution / packaging
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE и редакторы
+.idea
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# Логи и базы данных
+*.log
+*.sqlite3
+
+# Тестовые файлы
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+
+# Jupyter Notebook
+.ipynb_checkpoints
 
 
+# macOS
+.DS_Store
 
+# Windows
+Thumbs.db
 
+# Linux
+*~
+
+# Артефакты сборки
+*.so
+*.o
+*.a
+*.dll
+*.exe
+
+# Другие временные файлы
+*.tmp
+*.bak
+*.swp
